<resources>
    <string name="app_name">Caute System</string>
    <string name="correo_electronico">Correo Electronico</string>
    <string name="contrase_a">Contraseña</string>
    <string name="confirmar_contrase_a">Confirmar contraseña</string>
    <string name="registrarse">Registrarse</string>
    <string name="google">Google</string>
    <string name="iniciar_sesion">Iniciar Sesion</string>
    <string name="no_tienes_cuenta_registrate">No tienes cuenta? Registrate</string>
    <string name="ya_tienes_cuenta_inicia_sesi_n">Ya tienes cuenta? Inicia Sesión</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="hombre">Hombre</string>
    <string name="mujer">Mujer</string>
    <string name="numero_de_telefono">Numero de telefono</string>
    <string name="fecha">Fecha</string>
    <string name="nombre_de_usuario">Nombre de usuario</string>
    <string name="apellido_s">Apellido(s)</string>
    <string name="nombre_s">Nombre(s)</string>
    <string name="navegaci_n">Navegación</string>
    <string name="title_activity_maps">Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="guardar">Guardar</string>
    <string name="text_bluetooth_off">Bluetooth Off</string>
    <string name="text_enable">Enable</string>
    <string name="text_view_paired">Paired</string>
    <string name="text_scan_devices">Scan Devices</string>
    <string name="inactivo">Inactivo</string>
    <string name="activo">Activo</string>
    <string name="no_location_detected">No se puede obtener localización actual del dispositivo.</string>
    <string name="permission_rationale">permission rationale for more information</string>
    <string name="permission_denied_explanation">Se denego permiso, la aplicación no puede funcionar correctamente.</string>
    <string name="settings">Ajustes</string>

    <string name="autocomplete_hint">Enter place name or address</string>
    <string name="selected_place">Last Selected Place:</string>
    <string name="clear_text">Clear Text</string>
    <string name="place_details">&lt;b&gt;%1$s&lt;/b&gt;&lt;br/&gt;&lt;i&gt;Place Id: %2$s&lt;/i&gt;&lt;br/&gt;Address: %3$s&lt;br/&gt;Phone: %4$s&lt;br/&gt;Website: %5$s</string>
    <string name="olvidaste_tu_contrase_a">Olvidaste tu contraseña?</string>
    <string name="perfil">Perfil</string>

    <string-array name="months_arrays">
        <item>Enero</item>
        <item>Febrero</item>
        <item>Marzo</item>
        <item>Abril</item>
        <item>Mayo</item>
        <item>Junio</item>
        <item>Julio</item>
        <item>Agosto</item>
        <item>Septiembre</item>
        <item>Octubre</item>
        <item>Nomviembre</item>
        <item>Diciembre</item>
        <item>Todos (anual)</item>
    </string-array>

    <string-array name="months_arrays_alerts">
        <item>Enero</item>
        <item>Febrero</item>
        <item>Marzo</item>
        <item>Abril</item>
        <item>Mayo</item>
        <item>Junio</item>
        <item>Julio</item>
        <item>Agosto</item>
        <item>Septiembre</item>
        <item>Octubre</item>
        <item>Nomviembre</item>
        <item>Diciembre</item>
    </string-array>

    <string-array name="chart_types">
        <item>Cantidad de Alertas</item>
        <item>Riesgo</item>
        <item>Horas Riesgosas</item>
        <item>Por Ubicación</item>
    </string-array>

    <string name="alert_dialog_no_bt">Cannot use this application without bluetooth.</string>
    <string name="alert_dialog_yes">Yes</string>
    <string name="alert_dialog_no">No</string>
    <string name="alert_dialog_warning_title">Warning</string>
    <string name="alert_dialog_ok">Ok</string>
    <string name="alert_dialog_turn_on_bt">This application needs the Bluetooth. Do you want turn on?</string>
    <string name="toast_connected_to">Connected to</string>
    <string name="toast_unable_to_connect">Unable to connect device</string>
    <string name="toast_connection_lost">Device connection was lost</string>
    <string name="not_connected">You are not connected to a device</string>
    <string name="title_connecting">connecting...</string>
    <string name="title_connected_to">connected: </string>
    <string name="title_not_connected">not connected</string>
    <string name="connect">Connect device</string>
    <string name="disconnect">Disconnect device</string>
    <string name="preferences">Preferences</string>
    <string name="special_keys">Special keys</string>

</resources>
